// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > rendering > should match its default snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-white dark:text-black bg-gray-500 dark:bg-gray-400 border border-gray-500 dark:border-blue-400">
  <!-- @slot Badge content.  -->Badge
</div>"
`;

exports[`Badge > types with default variant > should match dark type snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-white dark:text-gray-50 bg-gray-700 border border-gray-700">
  <!-- @slot Badge content.  -->Badge dark
</div>"
`;

exports[`Badge > types with default variant > should match light type snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-gray-700 dark:text-gray-300 bg-gray-100 dark:bg-gray-900 border border-gray-100 dark:border-gray-900">
  <!-- @slot Badge content.  -->Badge light
</div>"
`;

exports[`Badge > types with default variant > should match light-border type snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-gray-700 dark:text-gray-300 bg-gray-100 dark:bg-gray-900 border border-current">
  <!-- @slot Badge content.  -->Badge light-border
</div>"
`;

exports[`Badge > types with default variant > should match medium type snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-white dark:text-black bg-gray-500 dark:bg-gray-400 border border-gray-500 dark:border-blue-400">
  <!-- @slot Badge content.  -->Badge medium
</div>"
`;

exports[`Badge > variants with default type > should match blue variant snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-white dark:text-black bg-blue-500 border border-blue-500">
  <!-- @slot Badge content.  -->Badge blue
</div>"
`;

exports[`Badge > variants with default type > should match gray variant snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-white dark:text-black bg-gray-500 dark:bg-gray-400 border border-gray-500 dark:border-blue-400">
  <!-- @slot Badge content.  -->Badge gray
</div>"
`;

exports[`Badge > variants with default type > should match green variant snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-white dark:text-black bg-green-500 border border-green-500">
  <!-- @slot Badge content.  -->Badge green
</div>"
`;

exports[`Badge > variants with default type > should match indigo variant snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-white dark:text-black bg-indigo-500 border border-indigo-500">
  <!-- @slot Badge content.  -->Badge indigo
</div>"
`;

exports[`Badge > variants with default type > should match orange variant snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-orange-800 dark:text-black bg-orange-200 border border-orange-200">
  <!-- @slot Badge content.  -->Badge orange
</div>"
`;

exports[`Badge > variants with default type > should match purple variant snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-white dark:text-black bg-purple-500 border border-purple-500">
  <!-- @slot Badge content.  -->Badge purple
</div>"
`;

exports[`Badge > variants with default type > should match red variant snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-white dark:text-black bg-red-500 border border-red-500">
  <!-- @slot Badge content.  -->Badge red
</div>"
`;

exports[`Badge > variants with default type > should match tan variant snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-tan-900 dark:text-black bg-tan-200 border border-tan-200">
  <!-- @slot Badge content.  -->Badge tan
</div>"
`;

exports[`Badge > variants with default type > should match teal variant snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-white dark:text-black bg-teal-500 border border-teal-500">
  <!-- @slot Badge content.  -->Badge teal
</div>"
`;

exports[`Badge > variants with default type > should match yellow variant snapshot 1`] = `
"<div data-id="sds-badge" role="status" class="inline-flex items-center justify-center gap-1 tracking-wide max-w-full uppercase px-2 py-1 text-xs font-bold text-center text-ellipsis whitespace-nowrap overflow-hidden align-baseline rounded-theme-sm text-yellow-800 dark:text-black bg-yellow-100 dark:bg-yellow-200 border border-yellow-100 dark:border-yellow-200">
  <!-- @slot Badge content.  -->Badge yellow
</div>"
`;
